PackageServiceImpl.java,日志和返回结果初步设计

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,3 +28,5 @@ kmsPackage:
   updateSign: E:/updatefile/
   packageWithoutSign:
   packageWithSign:
+  sqlErrorLog: /opt/KmsPackage/sqlErrorLog.log
+
